--- a/backend/src/main/resources/ValidationMessages_en.properties
+++ b/backend/src/main/resources/ValidationMessages_en.properties
@@ -30,3 +30,20 @@ constraint.register.email.DuplicateEmail.message= This e-mail is registered in t
 constraint.card.no.CreditCardNumber.message= Enter a valid card number.
 constraint.card.cvv2.Size.message=Please enter a valid cvv number.
 constraint.card.cvv2.Pattern.message= Please enter a valid cvv number.
+
+
+##EXCEPTIONS
+
+common.EntityNotFoundException=Not found.
+account.IncorrectEntryException= You entered the username or password incorrectly.
+account.DisabledException= Waiting for your account to be Approved by the Administrator.
+account.EntityNotFoundException= Email not found, please check.
+category.EntityNotFoundException=The main category could not be found.
+card.EntityNotFoundException=Credit floor not found.
+order.EntityNotFoundException= Order not found.
+photo.FileUploadException=The photo could not be loaded.
+photo.EntityNotFoundException=The photo was not found.
+product.EntityNotFoundException=The product was not found.
+user.EntityNotFoundException=Email not found.
+user.id.EntityNotFoundException=User not found.
+
