rsql added and redis added

--- a/frontend/public/locales/tr/common.json
+++ b/frontend/public/locales/tr/common.json
@@ -1,38 +1,39 @@
 {
-  "Search": "Ara",
-  "Login": "Giriş yap",
-  "Logout": "Çıkış yap",
-  "Sort by": "Sırala",
-  "Old to new": "Eskiden yeniye",
-  "New to old": "Yeniden eskiye",
-  "Price hight to low": "Pahalıdan ucuza",
-  "Price low to High": "Ucuzdan pahalıya",
-  "Sorry!": "Üzgünüz!",
-  "We couldn't find the product you were looking for": "Aradığınız ürünü bulamadık",
-  "Total Price": "Toplam Fiyat",
-  "Checkout": "Ödemeyi Tamamla",
-  "Username": "Kullanıcı adı",
-  "Password": "Şifre",
-  "Signup": "Üye ol",
-  "First Name": "İsim",
-  "Last Name": "Soyisim",
-  "Phone Number": "Telefon Numarası",
-  "Address": "Adres",
-  "District": "İlçe",
-  "Province": "İl",
-  "Add to Cart": "Sepete Ekle",
-  "Cart Detail": "Sepet Detayı",
-  "Payment": "Ödeme",
-  "Order is successfull": "Sipariş başarılı",
-  "Order Detail": "Sipariş Detayı",
-  "Products": "Ürünler",
-  "Payment Detail": "Ödeme Detayı",
-  "Card Number": "Kart Numarası",
-  "Last Date": "Geçerlilik Tarihi",
-  "Save Card": "Kartı sakla",
-  "Back": "Geri",
-  "Complete": "Tamamla",
-  "Next": "Devam et",
-  "Loading": "Yükleniyor",
-  "Error": "Hata"
+    "Search": "Ara",
+    "Login": "Giriş yap",
+    "Logout": "Çıkış yap",
+    "Sort by": "Sırala",
+    "Categories": "Kategoriler",
+    "Old to new": "Eskiden yeniye",
+    "New to old": "Yeniden eskiye",
+    "Price hight to low": "Pahalıdan ucuza",
+    "Price low to High": "Ucuzdan pahalıya",
+    "Sorry!": "Üzgünüz!",
+    "We couldn't find the product you were looking for": "Aradığınız ürünü bulamadık",
+    "Total Price": "Toplam Fiyat",
+    "Checkout": "Ödemeyi Tamamla",
+    "Username": "Kullanıcı adı",
+    "Password": "Şifre",
+    "Signup": "Üye ol",
+    "First Name": "İsim",
+    "Last Name": "Soyisim",
+    "Phone Number": "Telefon Numarası",
+    "Address": "Adres",
+    "District": "İlçe",
+    "Province": "İl",
+    "Add to Cart": "Sepete Ekle",
+    "Cart Detail": "Sepet Detayı",
+    "Payment": "Ödeme",
+    "Order is successfull": "Sipariş başarılı",
+    "Order Detail": "Sipariş Detayı",
+    "Products": "Ürünler",
+    "Payment Detail": "Ödeme Detayı",
+    "Card Number": "Kart Numarası",
+    "Last Date": "Geçerlilik Tarihi",
+    "Save Card": "Kartı sakla",
+    "Back": "Geri",
+    "Complete": "Tamamla",
+    "Next": "Devam et",
+    "Loading": "Yükleniyor",
+    "Error": "Hata"
 }
